--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Discord Bot Image -->
     <section id="discord-bot" class="text-center mt-5">
-        <img src="discord-bot.png" alt="Discord Bot" width="300">
+        <img src="matholympiad.png" alt="Discord Bot" width="300">
     </section>
 
     <!-- Contact Form -->
