--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mathematical Discord Bot</title>
+    <title>Gauss</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <!-- Header Section -->
     <header class="bg-dark text-white text-center p-4">
-        <h1>Mathematical Discord Bot</h1>
+        <h1>Gauss Mathematical Discord Bot + Application</h1>
         <p>A bot that solves complex mathematical problems for you!</p>
     </header>
 
@@ -26,15 +26,15 @@
                 <p>The bot provides instant responses to your mathematical queries, saving you time and effort.</p>
             </div>
             <div class="col-md-4">
-                <h3>Easy to Use</h3>
-                <p>Simply type your mathematical problem in the chat and the bot will provide the solution.</p>
+                <h3>AI Incorporation</h3>
+                <p>Simply type any mathematical problem in the chat and AI will quickly respond with a short and accurate answer.</p>
             </div>
         </div>
     </section>
 
     <!-- Discord Bot Image -->
     <section id="discord-bot" class="text-center mt-5">
-        <img src="matholympiad.png" alt="Discord Bot" width="300">
+        <img src="mathcounts.jpg" alt="Image" width="300">
     </section>
 
     <!-- Contact Form -->
