--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header class="bg-dark text-white text-center p-4">
         <h1>Gauss Mathematical Discord Bot + Application</h1>
         <p>A bot that solves complex mathematical problems for you!</p>
+        <a href="https://github.com/intrepidbird/gauss/" class="btn btn-primary">GitHub Repository</a>
     </header>
 
     <!-- Features Section -->
